Fixed overlapping title

--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,21 @@
 body {
   background-image: url("../imgs/single_two.jpeg");
-  /* background-position: center; */
   background-size: 1950px 1950px;;
   height: 100vh;
   min-height: 100vh;
 }
 
 .fill {
+  /* position:absolute;
+  left: 300px; */
+  flex-direction: column;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
   min-height: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
+  margin-left: max(240px, 20%);
 }
 
 .centered {
@@ -26,7 +28,7 @@ body {
 .selection-box {
   max-height: 350px;
   margin: 10px;
-  background-color: rgba(255, 244, 194, 0.4);
+  background-color: rgba(255, 244, 194, 0.6);
   display: flex;
 }
 
@@ -36,7 +38,6 @@ body {
 }
 
 .picture-box {
-  background-color: rgba(255, 244, 194, 0.4);
   font-family: monospace;
   font-weight: 500;
   font-size: 16px;
